# StreamChannelAssembler

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  docker-compose.yml  main.cpp  run.sh
.github/workflows/: CMakeTests.yml  clang_formatting_test.yml  docker_build_test.yml  doxygen_doc_test.yml  unit_test.yml
Inputs/: config.json
data/: config.json
data/contents/examples/: ffmpeg_example.json  gstream_example.json  radio_example.json  webcam_example.json
data/overlays/: overlay.json
docker/: entrypoint.sh  install_windows.ps1
servers/Janus-Gateway/: Dockerfile  docker-compose.yml
servers/MediaMTX/: 1.test_stream.sh  docker-compose.yml  test_view.sh
servers/WeaveScope/: docker-compose.yml
servers/WebView/: docker-compose.yml  index.html
servers/nginx-rtmp/: docker-compose.yml  nginx.conf
servers/nginx-rtmp (rtmp/hls)/: Dockerfile  docker-compose.yml  nginx-rtmp.conf
servers/rtsp-simple-server/: docker-compose.yml
setup/: ubuntu-2204.sh
src/: CMakeLists.txt  MediaProcessor.cpp  MediaProcessor.hpp  file.cpp  file.h  file.hpp  format.cpp  format.h  format.hpp  main.cpp  stream.cpp  stream.h  stream.hpp  stream_utils.cpp  stream_utils.h  stream_utils.hpp
tests/: test_create_stream.cpp  test_get_input_format.cpp  test_push_image.cpp  test_to_lower.cpp
